--- a/public/index5.html
+++ b/public/index5.html
@@ -53,7 +53,7 @@
             // console.log(engine)
             var player = new Clappr.Player({
                 parentId: "#player",
-                source: "https://203.247.240.228:3000/hls-bbibbi/master.m3u8",
+                source: "https://203.247.240.228:3000/hls-bunny/master.m3u8",
                 mute: true,
                 autoPlay: true,
                 playback: {
