--- a/public/index8.html
+++ b/public/index8.html
@@ -29,7 +29,7 @@
 
             //   p2pml.hlsjs.initHlsJsPlayer(hls);
 
-              hls.loadSource("https://203.247.240.228:3000/hls-bbibbi/master.m3u8");
+              hls.loadSource("https://203.247.240.228:3000/hls-mythortreat/master.m3u8");
 
               var video = document.getElementById('video');
               hls.attachMedia(video);
